Cleanup a lot of logic
